[package]
name = "rustdis"
version = "0.1.0"
authors = ["Philipp Renoth <renoth@aitch.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
futures = "0.3"
log = "0.4"
env_logger = "0.8"
bencher = "0.1"

# Should our implementation be at a point, where computation is the bottleneck, we can check these options again.
# Those optimizations didn't improve anything yet.

# [profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1
# panic = "abort"
